@@ -229,7 +229,7 @@ daemon_fork = 1
 # there will be two snmptt processes running.  The first process will 
 # continue to run as the user that ran snmptt (root), waiting for the
 # child to quit.  After the child quits, the parent process will remove 
-# the snmptt.pid file  and exit. 
+# the snmptt.pid file and exit. 
 daemon_uid = snmptt
 
 # Complete path of file to store process ID when running in daemon mode.
